--- a/404.html
+++ b/404.html
@@ -1156,6 +1156,8 @@
           showToast('Kupon tidak ditemukan atau tidak aktif', 'error');
           appliedCoupon = null;
           updateTotalPrice();
+          checkBtn.disabled = false;
+          checkBtn.textContent = originalText;
         } else {
           const couponData = querySnapshot.docs[0].data();
 
@@ -1164,6 +1166,8 @@
             showToast('Kupon sudah kadaluarsa', 'error');
             appliedCoupon = null;
             updateTotalPrice();
+            checkBtn.disabled = false;
+            checkBtn.textContent = originalText;
             return;
           }
 
